--- a/SQL_Actions/SQL_Actions.vcxproj.filters
+++ b/SQL_Actions/SQL_Actions.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Insert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="About.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainForm.cpp">
