--- a/SQL_Actions/SQL_Actions.vcxproj
+++ b/SQL_Actions/SQL_Actions.vcxproj
@@ -134,6 +134,9 @@
     <ClCompile Include="sqlMyConn.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="About.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Insert.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -143,11 +146,15 @@
     <ClInclude Include="sqlMyConn.h" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Insert.resx">
       <DependentUpon>Insert.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.h</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
